# SLM

./: .gitignore  .safety-policy.yml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check.sh  data_model_refactor.txt  justfile  manage.py  pyproject.toml  requirements.txt  setup.cfg  test.html  time.html  todo.txt
.github/workflows/: lint.yml  release.yml  safety.yml  scorecard.yml  security.yml  test.yml  zizmor.yml
deploy/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
deploy/nginx/: nginx.conf
doc/: .readthedocs.yaml  requirements.txt
doc/source/: APIs.rst  changelog.rst  commands.rst  conf.py  configuration.rst  data_model.rst  dependencies.rst  extensions.rst  ignored_spellings.txt  index.rst  installation.rst  overview.rst  reference.rst  refs.rst  signals.rst  upgrading.rst
doc/source/_static/: style.css
doc/source/architecture/: configuration.rst  data_model.rst  django.rst  extensions.rst  index.rst  signals.rst
doc/source/manual/: howto.rst  index.rst  organization.rst  permissions.rst
doc/source/operations/: configuration.rst  index.rst  serving.rst
doc/source/reference/: index.rst  settings.rst  signals.rst  validators.rst
igs_tools/: connection.py  directory.py  file.py  queue.py  utils.py
igs_tools/defines/: __init__.py  constellation.py  data_center.py  data_type.py  rinex.py
igs_tools/tests/: tests.py
slm/: __init__.py  admin.py  apps.py  authentication.py  fields.py  forms.py  manage.py  middleware.py  new_forms.py  parser.py  receivers.py  signals.py  singleton.py  urls.py  utils.py  validators.py  views.py  widgets.py
slm/api/: fields.py  filter.py  pagination.py  permissions.py  serializers.py  views.py
slm/api/edit/: serializers.py  views.py
slm/api/public/: serializers.py  views.py
slm/defines/: AlertLevel.py  AntennaCalibration.py  AntennaFeatures.py  AntennaReferencePoint.py  Aspiration.py  CardinalDirection.py  CollocationStatus.py  Countries.py  DataRate.py  EquipmentState.py  EquipmentType.py  FlagSeverity.py  FractureSpacing.py  FrequencyStandardType.py  GeodesyMLVersion.py  ISOCountry.py  Instrumentation.py  LogEntryType.py  RinexVersion.py  SLMFileType.py  SatelliteSystem.py  SiteFileUploadStatus.py  SiteLogFormat.py  SiteLogStatus.py  TectonicPlates.py  __init__.py
slm/jinja2/: __init__.py
slm/legacy/: __init__.py  binding.py  parser.py
slm/logs/: localhost.log.2022-11-13
slm/management/commands/: build_index.py  generate_geo.py  generate_log.py  generate_sinex.py  head_from_index.py  import_archive.py  import_equipment.py  routine.py  set_site.py  sitelog.py  synchronize.py  update_data_availability.py  validate.py  validate_db.py  validate_geo.py  validate_gml.py
slm/map/: __init__.py  admin.py  apps.py  defines.py  fields.py  models.py  urls.py  views.py
slm/map/migrations/: 0001_initial.py
slm/map/templatetags/: slm_map.py
slm/migrations/: 0001_alter_dataavailability_unique_together_and_more.py  0001_alter_site_status.py  0001_alter_siteantenna_marker_enu_alter_sitelocation_llh_and_more.py  0001_initial.py  0001_initial_squashed_0030_alter_antenna_state_alter_radome_state_and_more.py  0001_squashed_01.py  0002_alter_dataavailability_site.py  0002_alter_datacenter_agency.py  0002_alter_siteantenna_installed_and_more.py  0002_auto_20220922_0801.py  0002_auto_20221002_1715.py  0002_help_alter_siteantenna_installed_and_more.py  0003_about_alter_help_options_rename_detail_help_content.py  0003_alter_datacenter_options.py  0003_auto_20221019_0213.py  0003_remove_logentry_slm_logentr_site_lo_7a2af7_idx_and_more.py  0004_alter_antenna_manufacturer_alter_radome_manufacturer_and_more.py  0004_alter_logentry_timestamp_and_more.py  0004_auto_20221020_0720.py  0004_merge_20230209_0401.py  0005_alter_about_options_alter_help_options.py  0005_alter_antenna_manufacturer_alter_radome_manufacturer_and_more.py  0005_alter_logentry_options_alter_logentry_section_and_more.py  0005_auto_20221024_2353.py  0006_alter_agency_shortname.py  0006_alter_logentry_options_alter_logentry_index_together.py  0007_alter_dataavailability_rate.py  0007_network_public.py  0008_alter_archiveindex_options_and_more.py  0008_alter_siteantenna_antenna_type_and_more.py  0009_alter_archiveindex_end.py  0009_alter_siteantenna_radome_type.py  0010_alter_dataavailability_rinex_version_and_more.py  0010_alter_siteidentification_cdp_number_and_more.py  0011_alter_site_created.py  0011_alter_siteidentification_fracture_spacing.py  0012_alter_logentry_type.py  0013_unpublishedfilesalert.py  0014_sitelogpublished.py  0015_alter_siteantenna_options_and_more.py  (+12 more)
slm/models/: __init__.py  about.py  alerts.py  compat.py  data.py  equipment.py  help.py  index.py  network.py  search.py  sitelog.py  system.py  user.py
slm/parsing/: __init__.py
slm/parsing/legacy/: __init__.py  binding.py  parser.py
slm/parsing/xsd/: __init__.py  binding.py  parser.py  resolver.py
slm/receivers/: __init__.py  alerts.py  cleanup.py  event_emailers.py  event_loggers.py  index.py  site_record.py
slm/settings/: __init__.py  auth.py  ckeditor.py  debug.py  internationalization.py  logging.py  rest.py  root.py  routines.py  secrets.py  security.py  slm.py  static_templates.py  templates.py  uploads.py  urls.py  validation.py
slm/settings/platform/: darwin.py
slm/templates/: messages.html
slm/templates/account/: base.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html
slm/templates/rest_framework/: admin.html  (+1 more)
slm/templatetags/: slm.py
slm/tests/: settings.py  test_settings.py  tests.py  wsgi.py
src/igs_tools/: utils.py
src/slm/: __init__.py  admin.py  apps.py  authentication.py  context.py  forms.py  manage.py  signals.py  urls.py  utils.py  validators.py  views.py  widgets.py  wsgi.py
tests/: settings.py  test_settings.py  test_utils.py  tests.py  wsgi.py
tests/commands/: test_import_archive.py
tests/defines/: ISOCountry.py  SiteLogStatus.py
tests/parsing/: legacy.py  xsd.py
tests/uploads/: tests.py
(+386 files in other folders)
