[tool.poetry]
name = "igs-slm"
version = "0.2.0"
description = "IGS Site Log Manager"
authors = [
    "Ashley Santiago <ashley.k.santiago@jpl.nasa.gov>",
    "Brian Kohan <bkohan@jpl.nasa.gov>"
]
license = "MIT"
repository = "https://github.com/International-GNSS-Service/SLM"
homepage = "https://igs-slm.readthedocs.io"
readme = "README.md"
keywords = [
    "SLM",
    "Site Log Manager",
    "IGS",
    "International Geodetic Service",
    "GNSS",
    "GPS",
    "GLONASS",
    "Galileo",
    "BeiDou",
    "QZSS"
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "slm" },
    { include = 'igs_tools' }
]
exclude = ["slm/tests"]

[tool.poetry.scripts]
manage = 'slm.manage:main'

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.0"
django-split-settings = "^1.1.0"
importlib-resources = ">1.3.0"
django-allauth = "^0.58.0"
django-widget-tweaks = "^1.4.12"
djangorestframework = "^3.13.1"
django-render-static = "^2.0.0"
django-compressor = "^4.0"
django-filter = "^23.2"
python-dateutil = "^2.8.2"
django-ipware = "^5.0.0"
django-enum = "^1.2.2"
enum-properties = "^1.7.0"
tqdm = "^4.64.1"
geojson = "^2.5.0"
Pillow = "^10.0.0"
polyline = "^2.0.0"
lxml = "^4.9.1"
django-polymorphic = "^3.1.0"
Jinja2 = "^3.1.2"
django-ckeditor = "^6.5.1"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
djangorestframework-gis = "^1.0"
numpy = "^1.24.2"
pytest = "^7.3.0"
chardet = "^5.1.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.1.5"
pydot = "^1.4.2"
pyparsing = "^3.0.6"
ipython = "8.12.3"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
Sphinx = "^7.1.2"
coverage = "^7.2.1"
readme-renderer = "^42.0"
safety = "^2.1.1"
sphinx-argparse = "^0.3.1"
pylint = "^3.0.1"
pytest-cov = "^4.0.0"
sphinx-rtd-theme = "^1.0.0"
django-test-migrations = "^1.2.0"
doc8 = "^0.11.2"
django-debug-toolbar = "^4.1.0"
pygount = "^1.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
