[project]
name = "igs-slm"
version = "0.4.0b0"
description = "IGS Site Log Manager"
requires-python = ">=3.8,<4.0"
authors = [
  {name = "Brian Kohan", email = "bkohan@jpl.nasa.gov"},
  {name = "Ashley Santiago", email = "ashley.k.santiago@jpl.nasa.gov"},
  {name = "Robert Khachikyan", email = "robert.khachikyan@jpl.nasa.gov"}
]
license = "MIT"
license-files = [ "LICENSE" ]
repository = "https://github.com/International-GNSS-Service/SLM"
homepage = "https://igs-slm.readthedocs.io"
readme = "README.md"
keywords = [
    "SLM",
    "Site Log Manager",
    "IGS",
    "International GNSS Service",
    "GNSS",
    "GPS",
    "GLONASS",
    "Galileo",
    "BeiDou",
    "QZSS"
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "django (>=4.2.23,<5.0)",
    "django-split-settings>=1.2.0,<2.0.0",
    "importlib-resources>1.3.0",
    "django-allauth>=65.4",
    "django-widget-tweaks>=1.4.12,<2.0.0",
    "djangorestframework>=3.15.2,<4.0.0",
    "django-render-static>=3.1.2,<4.0.0",
    "django-filter>=24.2,<25.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "django-ipware>=7.0.1,<8.0.0",
    "django-enum>=1.2.2,<2.0.0",
    "enum-properties>=1.7.0,<2.0.0",
    "tqdm>=4.64.1,<5.0.0",
    "geojson>=3.1.0,<4.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "polyline>=2.0.0,<3.0.0",
    "lxml>=5.2.1,<6.0.0",
    "django-polymorphic>=4.1.0,<5.0",
    "Jinja2>=3.1.2,<4.0.0",
    "django-ckeditor>=6.5.1,<7.0.0",
    "django-crispy-forms>=2.0,<3.0.0",
    "crispy-bootstrap5>=2024.2,<2025.0",
    "djangorestframework-gis>=1.0,<2.0.0",
    "chardet>=5.1.0,<6.0.0",
    "psycopg>=3.1",
    "django-typer>=2.1.2,<3.0.0",
    "click<8.2", # TODO remove this when django-typer is upgraded
    "django-routines>=1.1.3,<2.0.0",
    "rich>=13.7.1,<15.0.0",
    "requests>=2.32.4,<3.0.0",
    "packaging>=24.2",
    "django-compressor>=4.5.1",
    "django-environ>=0.11.2",
    "django-hijack>=3.6.2",
]

[project.optional-dependencies]
gunicorn = ["gunicorn>=22.0.0"]
debug = [
    "ipdb>=0.13.13,<1.0.0",
    "django-debug-toolbar>=4.1.0,<5.0.0",
    "django-extensions>=3.1.5,<4.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "https://igs-slm.readthedocs.io"
"Documentation" = "https://igs-slm.readthedocs.io"
"Repository" = "https://github.com/International-GNSS-Service/SLM"
"Issues" = "https://github.com/International-GNSS-Service/SLM/issues"
"Changelog" = "https://igs-slm.readthedocs.io/en/latest/changelog.html"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/slm",
    "src/igs_tools"
]

[project.scripts]
slm-startproject = 'slm.bin.startproject:app'
slm = "slm.manage:main"

[dependency-groups]
dev = [
    "django-extensions>=3.1.5,<4.0.0",
    "pydot>=2.0.0,<3.0.0",
    "pyparsing>=3.0.6,<4.0.0",
    "ipython==8.12.3",
    "pytest>=8.1.1,<9.0.0",
    "pytest-django>=4.5.2,<5.0.0",
    "coverage>=7.2.1,<8.0.0",
    "readme-renderer[md]>=43.0,<44.0",
    "safety>=3.1.0,<4.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "django-test-migrations>=1.2.0,<2.0.0",
    "doc8>=1.1.1,<2.0.0",
    "django-debug-toolbar>=4.1.0,<5.0.0",
    "pygount>=1.4.0,<2.0.0",
    "ruff>=0.4.1,<1.0.0",
    "django-stubs>=5.0.2,<6.0.0",
    "ipdb>=0.13.13,<1.0.0",
    "pre-commit>=3.5.0",
    "tomlkit>=0.13.2",
    "djlint>=1.35.2",
    "whitenoise>=6.7.0",
]
docs = [
    "Sphinx>=7.2.0,<8.0.0; python_version > '3.8'",
    "Sphinx>=7.0.0,<8.0.0; python_version <= '3.8'",
    "sphinxcontrib-typer[html,pdf,png]>=0.5.0,<1.0.0; python_version >= '3.9'",
    "sphinx-tabs>=3.4.5,<4.0.0",
    "sphinxcontrib-svg2pdfconverter[cairosvg]>=1.2.2,<2.0.0",
    "sphinxcontrib-spelling>=8.0.0,<9.0.0; python_version > '3.10'",
    "sphinxcontrib-spelling<8.0.0; python_version <= '3.10'",
    "pyenchant==3.3.0rc1; python_version > '3.10'",
    "pyenchant>=3.2.0,<4.0.0; python_version <= '3.10'",
    "furo==2024.8.6",
    "sphinx-autobuild>=2021.3.14",
    "sphinxcontrib-django>=2.5",
]

# todo doc8 configuration here is not being picked up and doesnt seem to be working
# as expected - for now pass these parameters manually
[tool.doc8]
max-line-length = 100
sphinx = true


[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
# allow_redefinition = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"


[tool.pytest.ini_options]
# py.test options:
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "test*.py"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
env = [
    "TERMINAL_WIDTH=80",
]

addopts = [
  "--strict-markers",
  "--cov=slm",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered"
]

[tool.coverage.run]
omit = [
  "tests/**/*.py"
]
branch = true
source = ["slm"]
concurrency = ["multiprocessing"]
parallel = true
relative_files = true
command_line = "-m pytest --cov=slm"

[tool.coverage.paths]
source = [
    "slm"
]

[tool.ruff]
line-length = 88
exclude = [
    "doc",
    "dist",
    "igs_tools",
    "src/slm/bin/templates"
]

[tool.ruff.lint]
exclude = ["tests/**/*"]
